// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo iga events describe "frodo iga events describe --event-id 07736c3e-f879-4024-988b-8a640d5c1bf9": should describe event 'test_events_1' 1`] = `
"Active Event
Id          │07736c3e-f879-4024-988b-8a640d5c1bf9
Name        │phh-teacher-birthright-role-approval
Description │Teacher birthright role approval    
Owners (1)  │Parent                              
EntityType  │user                                
MutationType│update                              
Version     │v2                                  
Filter      │                                    
Status      │active                              
CreatedDate │2026-05-19T17:00:14.113641618Z      
ModifiedDate│2026-05-19T17:00:14.113642438Z      


Events (1):
- [07736c3e-f879-4024-988b-8a640d5c1bf9] phh-teacher-birthright-role-approval
"
`;

exports[`frodo iga events describe "frodo iga events describe --file test/e2e/exports/all/allEvents.event.json": should describe first events from file test/e2e/exports/all/allEvents.event.json 1`] = `
"Active Event
Id          │03cbeec3-a601-4f5c-869e-4e25360a5b8a
Name        │test_workflow_event_1               
Description │Test event description              
Owners (1)  │Preston                             
EntityType  │user                                
MutationType│create                              
Version     │v2                                  
Filter      │                                    
Status      │active                              
CreatedDate │                                    
ModifiedDate│                                    


Email Templates (2):
- [certificationAssigned]  - ATTENTION: Certification Task Assigned
- [certificationReassigned]  - ATTENTION: Certification Task Reassigned

Events (41):
- [03cbeec3-a601-4f5c-869e-4e25360a5b8a] test_workflow_event_1
- [0721b7a7-49c7-46c4-a383-4bd79d0371de] test-events-3
- [07736c3e-f879-4024-988b-8a640d5c1bf9] phh-teacher-birthright-role-approval
- [18bdc99a-0ae7-4589-9cd0-eef65b069c76] test-events-4
- [24cbe800-636f-4f8b-be4e-a9972f101cdb] test_workflow_event_3
- [27dc5427-53ae-4958-8391-38a71a310f84] test-events-4
- [2beb0154-5d73-4bde-81ce-13a4940946fb] test_workflow_event_3
- [2f2d5f25-adcb-48e8-b91c-f1f0684f3d6c] test_workflow_event_1
- [31ab05c9-c4e1-4630-a070-5e718576d42f] test_workflow_event_3
- [32f817ee-d997-4be8-9d6c-029d65cfc799] test_workflow_event_1
- [39867896-18ca-42cb-82d7-b38f719c31ab] test_workflow_event_1
- [55407d98-7438-4a8d-be38-47f7b675cdf2] test-events-3
- [64a45bd7-d844-4bc3-8886-591de901406f] phh-sunset-date-change
- [6b24426a-6250-4f0c-9f4c-221b90b06a3d] test_workflow_event_1
- [85a2617a-2670-4a20-a87d-e4533e7c4682] test_events_1
- [87b205e8-774a-411e-becf-f216a1f6418d] test_workflow_event_1
- [8fbb145c-4c8e-4a85-928b-dfe35a722870] test_workflow_event_3
- [94b32c39-c8c2-433d-aec4-9ce654d3357e] test_workflow_event_3
- [96eb1e8f-4216-45b6-bbae-905c652e80d6] test_workflow_event_1
- [9ae5a3c5-c9ea-40f1-9d86-b34ac26c2ec9] test_workflow_event_1
- [9f068fee-5c3e-46e6-bb64-ef7b6a93c2c9] test_workflow_event_3
- [a701b926-a337-4f98-b4c6-b04ab595e136] phh-teacher-birthright-role-approval
- [a8a8c683-c089-49d8-94bc-0bf2510c0e6e] test_workflow_event_3
- [a9249394-a49f-4b2a-9543-cf2923bdbe49] test_workflow_event_1
- [aa73f95f-f589-41ef-9030-1fa8c59f9821] test_workflow_event_3
- [af7fc731-6c17-45b7-92ed-4abce514bc8c] test-events-2
- [b3b4ccd0-d6d3-4c7c-a688-5fef602f6006] test_workflow_event_3
- [b86ae7cc-d73c-44ce-a6c8-6691f0713b53] test-events-2
- [b8ea4cb1-27c1-4c63-aaf2-b674c603a2ad] test_events_1
- [ba81aa26-46b0-4e23-a1e9-1dce32339c85] test_workflow_event_1
- [be3a1244-29c2-4b0a-b17a-b20302058e4b] test_workflow_event_1
- [c1b2c2ca-4579-4747-8d80-4529ac64dbc0] test_workflow_event_3
- [c1c9c6ab-7c0c-42df-9b11-657577deef9d] test_events_1
- [c27393aa-3f68-43bc-aea7-05b1c86eb44f] test_workflow_event_1
- [caae86f5-9363-4f41-a6f3-dc76eac12044] test_workflow_event_3
- [d12be9af-e35f-44fe-9376-d3f95d61daf8] phh-teacher-birthright-role-approval
- [d2bb44a9-cd8e-435a-be02-24bdeef953f8] test_workflow_event_1
- [e7764117-24c8-4038-982b-d0db8d318b79] test_workflow_event_3
- [efcbe203-2e6e-4e43-a074-82a6d3561845] test_workflow_event_1
- [f5d31e98-c763-4f1c-80f8-9453ac3c4462] test_workflow_event_3
- [fd8dd99b-5ab1-4e15-b168-4843fda08d57] test_workflow_event_1
"
`;

exports[`frodo iga events describe "frodo iga events describe -i 07736c3e-f879-4024-988b-8a640d5c1bf9 -f test/e2e/exports/all/allEvents.event.json": should describe event 'test_events_1' from file test/e2e/exports/all/allEvents.event.json 1`] = `
"Active Event
Id          │07736c3e-f879-4024-988b-8a640d5c1bf9
Name        │phh-teacher-birthright-role-approval
Description │Teacher birthright role approval    
Owners (1)  │Parent                              
EntityType  │user                                
MutationType│update                              
Version     │v2                                  
Filter      │                                    
Status      │active                              
CreatedDate │                                    
ModifiedDate│                                    


Email Templates (2):
- [certificationAssigned]  - ATTENTION: Certification Task Assigned
- [certificationReassigned]  - ATTENTION: Certification Task Reassigned

Events (41):
- [03cbeec3-a601-4f5c-869e-4e25360a5b8a] test_workflow_event_1
- [0721b7a7-49c7-46c4-a383-4bd79d0371de] test-events-3
- [07736c3e-f879-4024-988b-8a640d5c1bf9] phh-teacher-birthright-role-approval
- [18bdc99a-0ae7-4589-9cd0-eef65b069c76] test-events-4
- [24cbe800-636f-4f8b-be4e-a9972f101cdb] test_workflow_event_3
- [27dc5427-53ae-4958-8391-38a71a310f84] test-events-4
- [2beb0154-5d73-4bde-81ce-13a4940946fb] test_workflow_event_3
- [2f2d5f25-adcb-48e8-b91c-f1f0684f3d6c] test_workflow_event_1
- [31ab05c9-c4e1-4630-a070-5e718576d42f] test_workflow_event_3
- [32f817ee-d997-4be8-9d6c-029d65cfc799] test_workflow_event_1
- [39867896-18ca-42cb-82d7-b38f719c31ab] test_workflow_event_1
- [55407d98-7438-4a8d-be38-47f7b675cdf2] test-events-3
- [64a45bd7-d844-4bc3-8886-591de901406f] phh-sunset-date-change
- [6b24426a-6250-4f0c-9f4c-221b90b06a3d] test_workflow_event_1
- [85a2617a-2670-4a20-a87d-e4533e7c4682] test_events_1
- [87b205e8-774a-411e-becf-f216a1f6418d] test_workflow_event_1
- [8fbb145c-4c8e-4a85-928b-dfe35a722870] test_workflow_event_3
- [94b32c39-c8c2-433d-aec4-9ce654d3357e] test_workflow_event_3
- [96eb1e8f-4216-45b6-bbae-905c652e80d6] test_workflow_event_1
- [9ae5a3c5-c9ea-40f1-9d86-b34ac26c2ec9] test_workflow_event_1
- [9f068fee-5c3e-46e6-bb64-ef7b6a93c2c9] test_workflow_event_3
- [a701b926-a337-4f98-b4c6-b04ab595e136] phh-teacher-birthright-role-approval
- [a8a8c683-c089-49d8-94bc-0bf2510c0e6e] test_workflow_event_3
- [a9249394-a49f-4b2a-9543-cf2923bdbe49] test_workflow_event_1
- [aa73f95f-f589-41ef-9030-1fa8c59f9821] test_workflow_event_3
- [af7fc731-6c17-45b7-92ed-4abce514bc8c] test-events-2
- [b3b4ccd0-d6d3-4c7c-a688-5fef602f6006] test_workflow_event_3
- [b86ae7cc-d73c-44ce-a6c8-6691f0713b53] test-events-2
- [b8ea4cb1-27c1-4c63-aaf2-b674c603a2ad] test_events_1
- [ba81aa26-46b0-4e23-a1e9-1dce32339c85] test_workflow_event_1
- [be3a1244-29c2-4b0a-b17a-b20302058e4b] test_workflow_event_1
- [c1b2c2ca-4579-4747-8d80-4529ac64dbc0] test_workflow_event_3
- [c1c9c6ab-7c0c-42df-9b11-657577deef9d] test_events_1
- [c27393aa-3f68-43bc-aea7-05b1c86eb44f] test_workflow_event_1
- [caae86f5-9363-4f41-a6f3-dc76eac12044] test_workflow_event_3
- [d12be9af-e35f-44fe-9376-d3f95d61daf8] phh-teacher-birthright-role-approval
- [d2bb44a9-cd8e-435a-be02-24bdeef953f8] test_workflow_event_1
- [e7764117-24c8-4038-982b-d0db8d318b79] test_workflow_event_3
- [efcbe203-2e6e-4e43-a074-82a6d3561845] test_workflow_event_1
- [f5d31e98-c763-4f1c-80f8-9453ac3c4462] test_workflow_event_3
- [fd8dd99b-5ab1-4e15-b168-4843fda08d57] test_workflow_event_1
"
`;
